--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,24 @@
   <meta charset="utf-8">
   <title>Flixview - Constructive Movie Reviews</title>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="app/styles/style.css">
 </head>
 <body>
-  <script src="scripts/angular.js"></script>
-  <script src="scripts/angular-route.js"></script>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand">
+            <img class="logo" alt="Brand" src="https://ak2.picdn.net/shutterstock/videos/766603/thumb/1.jpg">
+          </a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <ng-view></ng-view>
+
+  <script src="app/scripts/angular.js"></script>
+  <script src="app/scripts/angular-route.js"></script>
 </body>
 </html>
