--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,13 @@
           <a class="navbar-brand">
             <img class="logo" alt="Brand" src="https://ak2.picdn.net/shutterstock/videos/766603/thumb/1.jpg">
           </a>
+          <input type="text" name="search">
+          <div class="nav-buttons">
+            <a href="/">Home</a>
+            <a href="/browse">Browse</a>
+            <a href="/account">My Account</a>
+            <a href="/logout">Logout</a>
+          </div>
         </div>
       </div>
     </div>
