--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,10 @@
           <a class="navbar-brand">
             <img class="logo" alt="Brand" src="https://ak2.picdn.net/shutterstock/videos/766603/thumb/1.jpg">
           </a>
-          <input type="text" name="search" ng-controller="ResultsController" class="search">
+          <form ng-controller="ResultsController" ng-submit="getResults(searchQuery)">
+            <p>{{ searchQuery }}</p>
+            <input type="search" name="search" class="search" ng-model="searchQuery" >
+          </form>
           <div class="nav-buttons">
             <a href="/">Home</a>
             <a href="/browse">Browse</a>
