--- a/client/app/results/results.html
+++ b/client/app/results/results.html
@@ -1,5 +1,6 @@
 <div id="container" ng-init="getResults(searchQuery)">
-  <ul ng-model="results">
+  <p ng-if="results.length === 0 && loaded">No results were found!</p>
+  <ul>
     <search-result source="result" ng-repeat="result in results">
       {{ result.title }}
     </search-result>
