--- a/client/app/details/details.html
+++ b/client/app/details/details.html
@@ -10,4 +10,18 @@
       {{ overview }}
     </p>
   </div>
+  <div class="noReviews" ng-if="!hasReview">
+    Currently no reviews...
+  </div>
+  <div class="reviewDetails" ng-repeat="review in reviews" ng-if="hasReview">
+    <h5>Username: {{review.username}}</h5>
+    <strong>Title: {{review.title}}</strong>
+    <small>Rating: {{review.rating}}</small>
+    <p>Review: {{review.content}}
+      <br/>
+      Count: {{review.voteCount}}
+      <br />
+      Date: {{review.date}}
+    </p>
+  </div>
 </div>
