--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="flixview">
+<html lang="en" ng-app="flixview" ng-cloak>
 <head>
   <meta charset="utf-8">
   <title>Flixview - Constructive Movie Reviews</title>
