--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="flixview" ng-cloak>
 <head>
   <meta charset="utf-8">
+  <base href="/" />
   <title>Flixview - Constructive Movie Reviews</title>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css">
   <link rel="stylesheet" href="app/styles/style.css">
