(refactor) update search input by clearing it after search

--- a/client/index.html
+++ b/client/index.html
@@ -13,42 +13,44 @@
 <body>
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" ng-controller="flixviewController">
     <header class="mdl-layout__header">
-      <div class="mdl-layout__header-row">
-        <!-- Title -->
-        <span class="mdl-layout-title">Flixview</span>
-        <!-- Add spacer, to align navigation to the right -->
-        <div class="mdl-layout-spacer"></div>
-        <!-- Navigation, we hide it in small screens -->
-        <nav class="mdl-navigation mdl-layout--large-screen-only">
-          <a class="mdl-navigation__link" href="">Log In</a>
-          <a class="mdl-navigation__link" href="">Browse</a>
-        </nav>
-        <!-- Search input -->
-        <div class="mdl-tectfield mdl-js-textfield mdl-textfield--expandable">
-          <label class="mdl-button mdl-js-button mdl-button--icon" for="search-expandable">
-            <i class="material-icons">search</i>
-          </label>
-          <div class="mdl-textfield__expandable-holder">
-            <form ng-submit="search(searchQuery)">
-              <input class="mdl-textfield__input" type="text" ng-model="searchQuery" id="search-expandable">
-              <label class="mdl-textfield__label" for="search-expandable">Search text</label>
-            </form>
-          </div>
-        </div>
-      </div>
-    </header>
-    <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-      <!-- small screen navigation menu -->
+      <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" ng-controller="zeusController">
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      <!-- Title -->
       <span class="mdl-layout-title">Flixview</span>
-      <nav class="mdl-navigation">
+      <!-- Add spacer, to align navigation to the right -->
+      <div class="mdl-layout-spacer"></div>
+      <!-- Navigation. We hide it in small screens. -->
+      <nav class="mdl-navigation mdl-layout--large-screen-only">
         <a class="mdl-navigation__link" href="">Log In</a>
         <a class="mdl-navigation__link" href="">Browse</a>
       </nav>
+      <!-- Search input here -->
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+        <label class="mdl-button mdl-js-button mdl-button--icon" for="search-expandable">
+          <i class="material-icons">search</i>
+        </label>
+        <div class="mdl-textfield__expandable-holder">
+          <form ng-submit="search(searchQuery)">
+          <input class="mdl-textfield__input" type="text" ng-model="searchQuery" id="search-expandable" />
+          <label class="mdl-textfield__label" for="search-expandable">Search text</label>
+          </form>
+        </div>
+      </div>
     </div>
-    <main class="mdl-layout__content">
-      <ng-view></ng-view>
-    </main>
+  </header>
+  <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+    <!-- Small screen navigation menu -->
+    <span class="mdl-layout-title">Flix view</span>
+    <nav class="mdl-navigation">
+      <a class="mdl-navigation__link" href="">Log In</a>
+      <a class="mdl-navigation__link" href="">Browse</a>
+    </nav>
   </div>
+  <main class="mdl-layout__content">
+    <ng-view></ng-view>
+  </main>
+</div>
   <!-- Angular script -->
   <script src="app/scripts/angular.js"></script>
   <script src="app/scripts/angular-route.js"></script>
