--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" ng-controller="flixviewController">
     <header class="mdl-layout__header">
-      <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" ng-controller="zeusController">
+      <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" ng-controller="flixviewController">
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
       <!-- Title -->
