(feat) build landing page factory for retrieving latest, popular, upcoming titles

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="flixview" ng-cloak>
 <head>
   <meta charset="utf-8">
+  <!-- removes # in url -->
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Flixview - Constructive Movie Reviews</title>
