--- a/client/app/details/details.html
+++ b/client/app/details/details.html
@@ -1,10 +1,10 @@
 <div ng-controller="DetailsController">
-  <div class="moviePoster">
-    <img src="http://image.tmdb.org/t/p/w185/{{poster_path}}"/>
-  </div>
-  <div class="movieDetails">
-    <h3 ng-if="original_name === undefined">{{ original_title }}</h3>
-    <h3 ng-if="original_title === undefined">{{ original_name }}</h3>
+ <div class='moviePoster'>
+   <img src="http://image.tmdb.org/t/p/w185/{{poster_path}}"/>
+ </div>
+ <div class='movieDetails'>
+    <h3 ng-if="original_name === undefined"> {{original_title}} </h3>
+    <h3 ng-if="original_title === undefined"> {{original_name}} </h3>
     <h5 ng-if="data.release_date !== undefined">Release Date</h5>
     <p ng-if="data.release_date !== undefined">{{data.release_date}}</p>
     <h5 ng-if="data.runtime !== undefined">Movie Length</h5>
@@ -15,20 +15,19 @@
     <h5 ng-if="data.episode_run_time[0] !== undefined">Episode Length</h5>
     <p ng-if="data.episode_run_time[0] !== undefined">{{data.episode_run_time[0]}} minutes</p>
     <h5>Overview</h5>
-    <p>{{ overview }}</p>
-  </div>
-  <div class="noReviews" ng-if="!hasReview">
-    Currently no reviews...
-  </div>
-  <div class="reviewDetails" ng-repeat="review in reviews" ng-if="hasReview">
-    <h5>Username: {{review.username}}</h5>
-    <strong>Title: {{review.title}}</strong>
-    <small>Rating: {{review.rating}}</small>
+    <p> {{overview}} </p>
+ </div>
+ <div class="noReviews" ng-if="!hasReview">
+   Currently no reviews...want to add one?
+ </div>
+ <div class="reviewDetails" ng-repeat="review in reviews" ng-if="hasReview">
+   <h5>Username: {{review.username}}</h5>
+   <strong> Title: {{review.title}} </strong> <small> Rating: {{review.rating}} </small>
     <p>Review: {{review.content}}
-      <br/>
+      <br>
       Count: {{review.voteCount}}
-      <br />
+      <br>
       Date: {{review.date}}
     </p>
-  </div>
+ </div>
 </div>
