--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -1,7 +1,7 @@
 <div ng-controller="LandingController" id="container">
-  <div class="movie-container">
-    <h2>Popular</h2>
-      <ul ng-init="fetchPopularMovies()" class="movie-list">
+  <div class="media-container">
+    <h2>Popular Movies</h2>
+      <ul ng-init="fetchPopularMovies()" class="media-list">
         <a ng-repeat="popularMovie in popularMovies | limitTo:10" href="/movie/{{ popularMovie.id }}">
           <li>
             <div class="poster-container">
@@ -11,9 +11,9 @@
         </a>
       </ul>
   </div>
-  <div class="movie-container">
-    <h2>Latest</h2>
-      <ul ng-init="fetchLatestMovies()" class="movie-list">
+  <div class="media-container">
+    <h2>Latest Movies</h2>
+      <ul ng-init="fetchLatestMovies()" class="media-list">
         <a ng-repeat="latestMovie in latestMovies | limitTo:10" href="/movie/{{ latestMovie.id }}">
           <li>
             <div class="poster-container">
@@ -23,13 +23,37 @@
         </a>
       </ul>
   </div>
-  <div class="movie-container">
-    <h2>Upcoming</h2>
-      <ul ng-init="fetchUpcomingMovies()" class="movie-list">
+  <div class="media-container">
+    <h2>Upcoming Movies</h2>
+      <ul ng-init="fetchUpcomingMovies()" class="media-list">
         <a ng-repeat="upcomingMovie in upcomingMovies | limitTo:10" href="/movie/{{ upcomingMovie.id }}">
           <li>
             <div class="poster-container">
               <img src="http://image.tmdb.org/t/p/w185/{{upcomingMovie.poster_path}}" alt="">
+            </div>
+          </li>
+        </a>
+      </ul>
+  </div>
+  <div class="media-container">
+    <h2>Popular TV Shows</h2>
+      <ul ng-init="fetchPopularShows()" class="media-list">
+        <a ng-repeat="popularShow in popularShows | limitTo:10" href="/movie/{{ popularShow.id }}">
+          <li>
+            <div class="poster-container">
+              <img src="http://image.tmdb.org/t/p/w185/{{popularShow.poster_path}}" alt="">
+            </div>
+          </li>
+        </a>
+      </ul>
+  </div>
+  <div class="media-container">
+    <h2>TV Shows Airing Today</h2>
+      <ul ng-init="fetchLatestShows()" class="media-list">
+        <a ng-repeat="latestShow in latestShows | limitTo:10" href="/movie/{{ latestShow.id }}">
+          <li>
+            <div class="poster-container">
+              <img src="http://image.tmdb.org/t/p/w185/{{latestShow.poster_path}}" alt="">
             </div>
           </li>
         </a>
