(feat) add logo href link to root

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <span class="mdl-layout-title">Flixview</span>
+      <span class="mdl-layout-title"><a class="nav-logo" href="/">Flixview</a></span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
@@ -42,7 +42,7 @@
   </header>
   <div class="mdl-layout__drawer mdl-layout--small-screen-only">
     <!-- Small screen navigation menu -->
-    <span class="mdl-layout-title">Flix view</span>
+    <span class="mdl-layout-title"><a class="nav-logo" href="/">Flix view</span>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="">Log In</a>
       <a class="mdl-navigation__link" href="">Browse</a>
