--- a/client/app/details/details.html
+++ b/client/app/details/details.html
@@ -1,6 +1,8 @@
 <div ng-controller="DetailsController">
  <div class='moviePoster'>
-   <img src="http://image.tmdb.org/t/p/w185/{{poster_path}}"/>
+   <!-- If no poster_path, show dummy image -->
+    <img ng-hide="!poster_path" src="http://image.tmdb.org/t/p/w185/{{poster_path}}" alt="">
+    <img ng-show="!poster_path" src="http://dummyimage.com/185x275/000/fff&text={{original_title}}" alt="">
  </div>
  <div class='movieDetails'>
     <h3 ng-if="original_name === undefined"> {{original_title}} </h3>
@@ -27,11 +29,12 @@
      <textarea placeholder="Leave a review here" ng-model="reviewBody" required></textarea>
      <h6>Rating</h6>
      <select ng-model="reviewRating" required>
-       <option>1</option>
-       <option>2</option>
-       <option>3</option>
-       <option>4</option>
-       <option>5</option>
+     <option selected disabled value="">--Give Rating--</option>
+       <option value="1">1</option>
+       <option value="2">2</option>
+       <option value="3">3</option>
+       <option value="4">4</option>
+       <option value="5">5</option>
      </select>
      <input type="submit">
    </form>
