--- a/client/index.html
+++ b/client/index.html
@@ -55,6 +55,7 @@
   <!-- Angular script -->
   <script src="app/scripts/angular.js"></script>
   <script src="app/scripts/angular-route.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
   <!-- Material Style Script -->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
