--- a/client/app/details/details.html
+++ b/client/app/details/details.html
@@ -23,6 +23,8 @@
  <div class="postReview">
    <h5>Reviews</h5>
    <form ng-submit="post()">
+     <h6>Username</h6>
+     <input type="text" placeholder="Username" ng-model="username" required>
      <h6>Title</h6>
      <input type="text" placeholder="Title" ng-model="reviewTitle" required>
      <h6>Comment</h6>
