--- a/client/index.html
+++ b/client/index.html
@@ -23,9 +23,9 @@
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
       <nav class="mdl-navigation mdl-layout--large-screen-only">
-        <a class="mdl-navigation__link" href="" ng-click="login()" ng-if="loggedIn === false">Log In</a>
-        <a class="mdl-navigation__link" href="" ng-click="logout()" ng-if="loggedIn">Log Out</a>
-        <a class="mdl-navigation__link" href="">Browse</a>
+        <a class="mdl-navigation__link" href="" ng-click="login()" ng-if="loggedIn === false"></a>
+        <a class="mdl-navigation__link" href="" ng-click="logout()" ng-if="loggedIn"></a>
+        <a class="mdl-navigation__link" href=""></a>
       </nav>
       <!-- Search input here -->
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
