update http to https

--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -6,8 +6,8 @@
           <li>
             <div class="poster-container">
               <!-- If no poster_path, show dummy image -->
-              <img ng-hide="!popularMovie.poster_path" src="http://image.tmdb.org/t/p/w185/{{popularMovie.poster_path}}" alt="">
-              <img ng-show="!popularMovie.poster_path" src="http://dummyimage.com/185x275/000/fff&text={{popularMovie.name}}" alt="">
+              <img ng-hide="!popularMovie.poster_path" src="https://image.tmdb.org/t/p/w185/{{popularMovie.poster_path}}" alt="">
+              <img ng-show="!popularMovie.poster_path" src="https://dummyimage.com/185x275/000/fff&text={{popularMovie.name}}" alt="">
             </div>
           </li>
         </a>
@@ -20,8 +20,8 @@
           <li>
             <div class="poster-container">
               <!-- If no poster_path, show dummy image -->
-              <img ng-hide="!latestMovie.poster_path" src="http://image.tmdb.org/t/p/w185/{{latestMovie.poster_path}}" alt="">
-              <img ng-show="!latestMovie.poster_path" src="http://dummyimage.com/185x275/000/fff&text={{latestMovie.name}}" alt="">
+              <img ng-hide="!latestMovie.poster_path" src="https://image.tmdb.org/t/p/w185/{{latestMovie.poster_path}}" alt="">
+              <img ng-show="!latestMovie.poster_path" src="https://dummyimage.com/185x275/000/fff&text={{latestMovie.name}}" alt="">
             </div>
           </li>
         </a>
@@ -34,8 +34,8 @@
           <li>
             <div class="poster-container">
               <!-- If no poster_path, show dummy image -->
-              <img ng-hide="!upcomingMovie.poster_path" src="http://image.tmdb.org/t/p/w185/{{upcomingMovie.poster_path}}" alt="">
-              <img ng-show="!upcomingMovie.poster_path" src="http://dummyimage.com/185x275/000/fff&text={{upcomingMovie.name}}" alt="">
+              <img ng-hide="!upcomingMovie.poster_path" src="https://image.tmdb.org/t/p/w185/{{upcomingMovie.poster_path}}" alt="">
+              <img ng-show="!upcomingMovie.poster_path" src="https://dummyimage.com/185x275/000/fff&text={{upcomingMovie.name}}" alt="">
             </div>
           </li>
         </a>
@@ -48,8 +48,8 @@
           <li>
             <div class="poster-container">
               <!-- If no poster_path, show dummy image -->
-              <img ng-hide="!popularShow.poster_path" src="http://image.tmdb.org/t/p/w185/{{popularShow.poster_path}}" alt="">
-              <img ng-show="!popularShow.poster_path" src="http://dummyimage.com/185x275/000/fff&text={{popularShow.name}}" alt="">
+              <img ng-hide="!popularShow.poster_path" src="https://image.tmdb.org/t/p/w185/{{popularShow.poster_path}}" alt="">
+              <img ng-show="!popularShow.poster_path" src="https://dummyimage.com/185x275/000/fff&text={{popularShow.name}}" alt="">
             </div>
           </li>
         </a>
@@ -62,8 +62,8 @@
           <li>
             <div class="poster-container">
               <!-- If no poster_path, show dummy image -->
-              <img ng-hide="!latestShow.poster_path" src="http://image.tmdb.org/t/p/w185/{{latestShow.poster_path}}" alt="">
-              <img ng-show="!latestShow.poster_path" src="http://dummyimage.com/185x275/000/fff&text={{latestShow.name}}" alt="">
+              <img ng-hide="!latestShow.poster_path" src="https://image.tmdb.org/t/p/w185/{{latestShow.poster_path}}" alt="">
+              <img ng-show="!latestShow.poster_path" src="https://dummyimage.com/185x275/000/fff&text={{latestShow.name}}" alt="">
             </div>
           </li>
         </a>
